--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ body {
 .modal { 
   background-color: white; 
   border-radius: 1.5rem; 
-  box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  border: 1px solid var(--color-border);
   overflow: hidden;
 }
 
